cargo-features = ["edition2024"]

[package]
name = "lockfree"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = "full"
strip = "none"

[dependencies]
log = "*"
simplelog = "*"
thread_local = "*"
no-panic = "*"
windows-sys = { version = "0.59.0", features = [
  "Win32",
    "Win32_System",
      "Win32_System_Threading",
      "Win32_System_Memory",
      "Win32_System_WindowsProgramming",
      "Win32_System_SystemServices",
      "Win32_System_SystemInformation",
      "Win32_System_Diagnostics",
        "Win32_System_Diagnostics_Debug",
      "Win32_System_Kernel",
      "Win32_System_LibraryLoader",
    "Win32_Data",
      "Win32_Data_HtmlHelp",
  "Wdk",
    "Wdk_System",
      "Wdk_System_Threading"
] }
